# Bernard-rs

./: .gitignore  Cargo.toml  readme.md  todo
bernard/: Cargo.toml
bernard/src/: check.rs  error.rs  lib.rs
bernard_agent/: Cargo.toml
bernard_agent/src/: handle_message.rs  main.rs
bernard_web/: Cargo.toml
bernard_web/src/: error.rs  main.rs  net.rs
