[package]
name = "bernard"
version = "0.1.0"
authors = ["StreatCodes <matt.r.streatfield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
serde = { version = "1.0.102", features = ["derive"] }
bincode = "1.2.0"
bytes = "0.4.12"